--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    //Paleta de colores seleccionada.
+    --color-1: #E94957;
+    --color-2: #F1FAEE;
+    --color-3: #6B0504;
+    --color-4: #626868;
+    --color-5: #230007;
+}
+
+body
+{
+    font-family: 'Cabin';
+    height: 100%;
+    width: 100%;
+}
