--- a/src/app/components/list-hamburger/list-hamburger.component.scss
+++ b/src/app/components/list-hamburger/list-hamburger.component.scss
@@ -1,13 +1,64 @@
-.box
-{
-    background-color: var(--color-3);
+.box {
+    // background-color: var(--color-3);
     justify-content: center;
-    .box-item
-    {
-        padding: 8rem;
-        background-color: var(--color-1);
-        margin: 2rem;
-        
-    }
-}
 
+
+    .box-item {
+        padding: 1rem;
+        background-color: var(--color-1);
+        margin: 1rem;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+
+        img {
+            border-radius: 50%;
+            border: 1px solid var(--color-2);
+            width: 50vh;
+            height: 50vh;
+
+        }
+
+        .buttom {
+            margin-top: 1rem;
+        }
+
+    }
+
+
+
+    .item-atributes {
+        display: flex;
+        clip-path: circle(21.1% at 89% 14%);
+        position: absolute;
+        width: 50vh;
+        height: 50vh;
+        background-color: var(--color-5);
+        color: var(--color-2);
+        font-family: 'IBM';
+        font-size: 30px;
+        justify-content: center;
+        align-items: center;
+        opacity: 60%;
+        border: 1px solid var(--color-2);
+        border-radius: 50%;
+        transition: all 0.3s;
+        flex-direction: column;
+
+        &:hover {
+            clip-path: circle(50% at 50% 50%);
+        }
+    }
+
+    .icon-plus
+    {
+        position: absolute;
+        top: 12%;
+        right: 14%;
+        display: flex;
+        font-size: 30px;
+        color:var(--color-2);
+    }
+
+
+}
