shopping cart can be ready

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex flex-wrap">
   <app-navbar class="col-12"></app-navbar>
+  <app-shopping-cart class="col-12"></app-shopping-cart>
   <h1 class="text-center col-12" style="padding: 50px; font-family: 'IBM';">¡Hace tu pedido!</h1>
   <app-list-hamburger class="col-12"></app-list-hamburger>
 </div>
