sum of the total order

--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -2,15 +2,14 @@
 
 <div class="icon-shopping" data-bs-toggle="modal" data-bs-target="#exampleModal">
     <i class="uil uil-shopping-cart position-relative" style="font-size: 40px;">
-        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-            >
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
             {{(data$ | async)!.length}}
             <span class="visually-hidden">unread messages</span>
         </span>
     </i>
 </div>
 <!-- Modal -->
-<div  class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -26,6 +25,7 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <div class="text-center" *ngIf="(data$ | async)!.length > 0 ">Total: {{total}}</div>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
