--- a/src/app/components/list-hamburger/list-hamburger.component.html
+++ b/src/app/components/list-hamburger/list-hamburger.component.html
@@ -1,21 +1,22 @@
+<div class="box flex-wrap d-flex container justify-content-center">
+        <div class="box-item  animate__animated animate__backInLeft  " *ngFor="let item of hamburgers let i = index;">
 
-<div class="box flex-wrap d-flex ">
-    <div class="box-item  animate__animated animate__backInLeft " *ngFor="let item of hamburgers let i = index;">
+            <div class="item-atributes">
+                <div class="icon-plus">
+                    <i class="uil uil-plus"></i>
+                </div>
+                <div class="item">
+                    <p>{{item.nombre}}</p>
+                </div>
+                <div class="item">
+                    <p>{{'Precio: $'+item.valor}}</p>
+                </div>
+            </div>
+            <img class="img-hamburger" [src]=item.ulrImg alt="hamburger">
+            <div class="buttom text-center">
+                <button type="button" class="btn btn-dark" (click)="addOrder(item)">Agregar al <br> carrito</button>
+            </div>
+        </div>
      
-        <div class="item-atributes">
-            <div class="icon-plus">
-                <i class="uil uil-plus"></i>
-            </div>
-            <div class="item">
-                <p>{{item.nombre}}</p>
-            </div>
-            <div class="item">
-                <p>{{'Precio: $'+item.valor}}</p>
-            </div>
-        </div>
-        <img class="img-hamburger" [src]=item.ulrImg alt="hamburger">
-        <div class="buttom text-center">
-            <button type="button" class="btn btn-light" (click)="addOrder(item)">Agregar</button>
-        </div>
-    </div>
+
 </div>
