--- a/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/components/shopping-cart/shopping-cart.component.html
@@ -26,6 +26,7 @@
             </div>
             <div class="modal-footer">
                 <div class="text-center" *ngIf="(data$ | async)!.length > 0 ">Total: {{total}}</div>
+                <div></div>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
