--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
+
+
 /* You can add global styles to this file, and also import other style files */
 :root {
     //Paleta de colores seleccionada.
@@ -11,9 +13,8 @@
     --color-5: #230007;
 }
 
-body
-{
-    font-family: 'IBM','Cabin';
+body {
+    font-family: 'IBM', 'Cabin';
     height: 100%;
     width: 100%;
 }
