Diseing of login completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="d-flex flex-wrap">
-  <app-navbar class="col-12"></app-navbar>
+<!-- Section login -->
+<div class="d-flex flex-wrap " >
+  <app-login class="col-12"></app-login>
+</div>
+
+<!-- section order -->
+<div *ngIf="false" class="d-flex flex-wrap">
   <app-shopping-cart class="col-12"></app-shopping-cart>
-  <h1 class="text-center col-12" style="padding: 50px; font-family: 'IBM';">¡Hace tu pedido!</h1>
   <app-list-hamburger class="col-12"></app-list-hamburger>
 </div>
