--- a/src/app/components/list-hamburger/list-hamburger.component.html
+++ b/src/app/components/list-hamburger/list-hamburger.component.html
@@ -1,3 +1,4 @@
+<app-navbar class="col-12"></app-navbar>
 <div class="box flex-wrap d-flex container justify-content-center">
         <div class="box-item  animate__animated animate__backInLeft  " *ngFor="let item of hamburgers let i = index;">
 
