--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -24,3 +24,17 @@
         color: var(--color-3);
     }
 }
+
+.register {
+    margin-right: 20%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    button {
+
+        background-color: var(--color-1);
+        color: var(--color-2);
+        &:hover
+        {
+            background-color: var(--color-5);
+        }
+    }
+}
