--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <!-- section order -->
-<div *ngIf="false" class="d-flex flex-wrap">
+<!-- <div *ngIf="true" class="d-flex flex-wrap">
   <app-shopping-cart class="col-12"></app-shopping-cart>
   <app-list-hamburger class="col-12"></app-list-hamburger>
-</div>
+</div> -->
