--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,8 @@ body {
     font-family: 'IBM', 'Cabin';
     height: 100%;
     width: 100%;
-    background-color: grey;
+    background-color: grey !important;
     // background-color: red;
 }
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
