--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,12 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
+// .snackbar-success {
 
+//     background-color: #146c43 !important;
+//     color: #146c43 !important;
+    
+// }
 
 /* You can add global styles to this file, and also import other style files */
 :root {
@@ -20,5 +25,16 @@ body {
     background-color: grey !important;
     // background-color: red;
 }
+
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
