--- a/src/app/components/sing-in-to-pedidosNow/sing-in.component.html
+++ b/src/app/components/sing-in-to-pedidosNow/sing-in.component.html
@@ -42,6 +42,6 @@
     </div> -->
     <div>
         <button type="submit" class="btn btn-primary" (click)="onSubmit()"
-            [disabled]="!(email.valid && password.valid && rePassword.valid)">Ingresar</button>
+            [disabled]="!(email.valid && password.valid )">Ingresar</button>
     </div>
 </mat-dialog-actions>
