Routing implemented right

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <!-- Section login -->
-<div class="d-flex flex-wrap " >
+<!-- <div class="d-flex flex-wrap ">
   <app-login class="col-12"></app-login>
-</div>
+</div> -->
 
-<!-- section order -->
-<!-- <div *ngIf="true" class="d-flex flex-wrap">
+<!-- section order  
+ <div *ngIf="true" class="d-flex flex-wrap">
   <app-shopping-cart class="col-12"></app-shopping-cart>
   <app-list-hamburger class="col-12"></app-list-hamburger>
 </div> -->
+
+<router-outlet></router-outlet>
