--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,7 +16,7 @@
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Perfil</a></li>
         <li><a class="dropdown-item" href="#">Pedidos</a></li>
-        <li><a class="dropdown-item" href="#">Cerrar sesión</a></li>
+        <li><a class="dropdown-item" (click)="logout()">Cerrar sesión</a></li>
       </ul>
     </div>
   </div>
