--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="dropdown" *ngIf="!login">
       <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Leandro | Almiron
+        {{user.email}}
       </button>
       <ul class="dropdown-menu">
         <li><a class="dropdown-item" href="#">Perfil</a></li>
