--- a/src/app/components/list-hamburger/list-hamburger.component.html
+++ b/src/app/components/list-hamburger/list-hamburger.component.html
@@ -8,10 +8,10 @@
                     <i class="uil uil-plus"></i>
                 </div>
                 <div class="item">
-                    <p>{{item.nombre}}</p>
+                    <p>{{item.name}}</p>
                 </div>
                 <div class="item">
-                    <p>{{'Precio: $'+item.valor}}</p>
+                    <p>{{'Precio: $'+item.price}}</p>
                 </div>
             </div>
             <img class="img-hamburger" [src]=item.ulrImg alt="hamburger">
