--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<!-- Section login -->
-<!-- <div class="d-flex flex-wrap ">
-  <app-login class="col-12"></app-login>
-</div> -->
-
-<!-- section order  
- <div *ngIf="true" class="d-flex flex-wrap">
-  <app-shopping-cart class="col-12"></app-shopping-cart>
-  <app-list-hamburger class="col-12"></app-list-hamburger>
-</div> -->
-
+<!-- <button (click)="this.addHamburgers(this.arrayHamburgers)"> Add hamburgers</button> -->
 <router-outlet></router-outlet>
