arreglo del main

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,16 @@
 <app-navbar style="height: 10% !important;" [login]="login"></app-navbar>
 
+
+<div class="d-flex justify-content-center">
+    <div class="text-absolute background-opacity "></div>
+</div>
 <div class="justify-content-end d-flex">
-    <div class="text-absolute">
-        <h1 class="text-center firstTxt">
+    <div class="text-absolute ">
+        <h1 class="text-center firstTxt m-5 ">
             Todo lo que necesitas
         </h1>
-        <h2 class="text-center secondTxt">para ser feliz es comerte una </h2>
-        <h1 class="text-center firstTxt">Hamburguesa</h1>
+        <h2 class="text-center secondTxt mt-5">para ser feliz es una </h2>
+        <h1 class="text-center firstTxt mt-5">Hamburguesa</h1>
     </div>
     <div>
         <img src="https://images.unsplash.com/photo-1607013251379-e6eecfffe234?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
