--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,10 +5,13 @@ $small: 500px;
 .firstTxt {
     font-family: 'Dancing Script';
     font-size: 100px;
+    word-spacing: 10px;
+
 }
 
 .secondTxt {
-    color: var(--color-3);
+    color: var(--color-2);
+    font-size: 50px;
 }
 
 .text-absolute {
@@ -28,15 +31,28 @@ img {
 
 
 @media screen and (max-width:$small) {
-
+    
+    h1,h2
+    {
+        color: var(--color-3) !important;
+    }
     .firstTxt {
-        font-size: 40px;
+        font-size: 60px;
     }
 
     .secondTxt {
-        border: 1px solid var(--color-1);
+        // border: 1px solid var(--color-2);
         padding: 20px;
-        font-size: 30px;
+        font-size: 40px;
+        
+    }
+    .background-opacity
+    {
+        background-color: var(--color-2);
+        opacity: 40%;
+        width: 90%;
+        height: calc(80vh - 5rem);
+        border: .1rem solid var(--color-1);
     }
 
 }
