--- a/src/app/components/list-hamburger/list-hamburger.component.html
+++ b/src/app/components/list-hamburger/list-hamburger.component.html
@@ -1,6 +1,6 @@
 <app-navbar [login]="login" class="col-12"></app-navbar>
-<app-shopping-cart class="col-12"></app-shopping-cart>
-<div class="box flex-wrap d-flex container justify-content-center justify-content-lg-start">
+<app-shopping-cart ></app-shopping-cart>
+<div class="box flex-wrap d-flex container justify-content-center justify-content-lg-center">
     <div class="box-item  animate__animated animate__backInLeft  " *ngFor="let item of hamburgers let i = index;">
 
         <div class="item-atributes">
